calc.output
Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt
    2          | stmt_list stmt

    3 stmt: EOL
    4     | exp EOL
    5     | VARIABLE '=' exp
    6     | error EOL

    7 exp: NUMBER
    8    | VARIABLE
    9    | exp '+' exp
   10    | exp '-' exp
   11    | exp '*' exp
   12    | exp '/' exp
   13    | exp '^' exp
   14    | '-' exp
   15    | '+' exp
   16    | '(' exp ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 16
')' (41) 16
'*' (42) 11
'+' (43) 9 15
'-' (45) 10 14
'/' (47) 12
'=' (61) 5
'^' (94) 13
error (256) 6
NUMBER (258) 7
EOL (259) 3 4 6
VARIABLE (260) 5 8
UMINUS (261)
UPLUS (262)


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
stmt_list (17)
    on left: 1 2, on right: 0 2
stmt (18)
    on left: 3 4 5 6, on right: 1 2
exp (19)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 4 5 9 10 11 12 13
    14 15 16


state 0

    0 $accept: . stmt_list $end

    error     shift, and go to state 1
    NUMBER    shift, and go to state 2
    EOL       shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    stmt_list  go to state 8
    stmt       go to state 9
    exp        go to state 10


state 1

    6 stmt: error . EOL

    EOL  shift, and go to state 11


state 2

    7 exp: NUMBER .

    $default  reduce using rule 7 (exp)


state 3

    3 stmt: EOL .

    $default  reduce using rule 3 (stmt)


state 4

    5 stmt: VARIABLE . '=' exp
    8 exp: VARIABLE .

    '='  shift, and go to state 12

    $default  reduce using rule 8 (exp)


state 5

   15 exp: '+' . exp

    NUMBER    shift, and go to state 2
    VARIABLE  shift, and go to state 13
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    exp  go to state 14


state 6

   14 exp: '-' . exp

    NUMBER    shift, and go to state 2
    VARIABLE  shift, and go to state 13
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    exp  go to state 15


state 7

   16 exp: '(' . exp ')'

    NUMBER    shift, and go to state 2
    VARIABLE  shift, and go to state 13
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    exp  go to state 16


state 8

    0 $accept: stmt_list . $end
    2 stmt_list: stmt_list . stmt

    $end      shift, and go to state 17
    error     shift, and go to state 1
    NUMBER    shift, and go to state 2
    EOL       shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    stmt  go to state 18
    exp   go to state 10


state 9

    1 stmt_list: stmt .

    $default  reduce using rule 1 (stmt_list)


state 10

    4 stmt: exp . EOL
    9 exp: exp . '+' exp
   10    | exp . '-' exp
   11    | exp . '*' exp
   12    | exp . '/' exp
   13    | exp . '^' exp

    EOL  shift, and go to state 19
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '^'  shift, and go to state 24


state 11

    6 stmt: error EOL .

    $default  reduce using rule 6 (stmt)


state 12

    5 stmt: VARIABLE '=' . exp

    NUMBER    shift, and go to state 2
    VARIABLE  shift, and go to state 13
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    exp  go to state 25


state 13

    8 exp: VARIABLE .

    $default  reduce using rule 8 (exp)


state 14

    9 exp: exp . '+' exp
   10    | exp . '-' exp
   11    | exp . '*' exp
   12    | exp . '/' exp
   13    | exp . '^' exp
   15    | '+' exp .

    $default  reduce using rule 15 (exp)


state 15

    9 exp: exp . '+' exp
   10    | exp . '-' exp
   11    | exp . '*' exp
   12    | exp . '/' exp
   13    | exp . '^' exp
   14    | '-' exp .

    $default  reduce using rule 14 (exp)


state 16

    9 exp: exp . '+' exp
   10    | exp . '-' exp
   11    | exp . '*' exp
   12    | exp . '/' exp
   13    | exp . '^' exp
   16    | '(' exp . ')'

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '^'  shift, and go to state 24
    ')'  shift, and go to state 26


state 17

    0 $accept: stmt_list $end .

    $default  accept


state 18

    2 stmt_list: stmt_list stmt .

    $default  reduce using rule 2 (stmt_list)


state 19

    4 stmt: exp EOL .

    $default  reduce using rule 4 (stmt)


state 20

    9 exp: exp '+' . exp

    NUMBER    shift, and go to state 2
    VARIABLE  shift, and go to state 13
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    exp  go to state 27


state 21

   10 exp: exp '-' . exp

    NUMBER    shift, and go to state 2
    VARIABLE  shift, and go to state 13
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    exp  go to state 28


state 22

   11 exp: exp '*' . exp

    NUMBER    shift, and go to state 2
    VARIABLE  shift, and go to state 13
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    exp  go to state 29


state 23

   12 exp: exp '/' . exp

    NUMBER    shift, and go to state 2
    VARIABLE  shift, and go to state 13
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    exp  go to state 30


state 24

   13 exp: exp '^' . exp

    NUMBER    shift, and go to state 2
    VARIABLE  shift, and go to state 13
    '+'       shift, and go to state 5
    '-'       shift, and go to state 6
    '('       shift, and go to state 7

    exp  go to state 31


state 25

    5 stmt: VARIABLE '=' exp .
    9 exp: exp . '+' exp
   10    | exp . '-' exp
   11    | exp . '*' exp
   12    | exp . '/' exp
   13    | exp . '^' exp

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '^'  shift, and go to state 24

    $default  reduce using rule 5 (stmt)


state 26

   16 exp: '(' exp ')' .

    $default  reduce using rule 16 (exp)


state 27

    9 exp: exp . '+' exp
    9    | exp '+' exp .
   10    | exp . '-' exp
   11    | exp . '*' exp
   12    | exp . '/' exp
   13    | exp . '^' exp

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '^'  shift, and go to state 24

    $default  reduce using rule 9 (exp)


state 28

    9 exp: exp . '+' exp
   10    | exp . '-' exp
   10    | exp '-' exp .
   11    | exp . '*' exp
   12    | exp . '/' exp
   13    | exp . '^' exp

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '^'  shift, and go to state 24

    $default  reduce using rule 10 (exp)


state 29

    9 exp: exp . '+' exp
   10    | exp . '-' exp
   11    | exp . '*' exp
   11    | exp '*' exp .
   12    | exp . '/' exp
   13    | exp . '^' exp

    '^'  shift, and go to state 24

    $default  reduce using rule 11 (exp)


state 30

    9 exp: exp . '+' exp
   10    | exp . '-' exp
   11    | exp . '*' exp
   12    | exp . '/' exp
   12    | exp '/' exp .
   13    | exp . '^' exp

    '^'  shift, and go to state 24

    $default  reduce using rule 12 (exp)


state 31

    9 exp: exp . '+' exp
   10    | exp . '-' exp
   11    | exp . '*' exp
   12    | exp . '/' exp
   13    | exp . '^' exp
   13    | exp '^' exp .

    '^'  shift, and go to state 24

    $default  reduce using rule 13 (exp)
